--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@
 !.husky
 !.commitlintrc.json
 !.versionrc.json
-!.stylelintrc.json
 
 # bundler cache
 _site
@@ -19,3 +18,4 @@ vendor
 # npm dependencies
 node_modules
 package-lock.json
+Gemfile.lock
